--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -76,3 +76,35 @@
               %br
               %br
               James has played in original and commercial bands as a member and a hired gun. His love of music is great enough that he hopes to be playing until his last day.
+  %ul.staggered_list.col.s6
+    %li.card
+      .card-image
+        %iframe{frameborder: "no", scrolling: "no", src: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/160882627&auto_play=true&hide_related=true&show_comments=true&show_user=true&show_reposts=false&visual=true", width: "100%", height: "150px"}
+      .card-content
+        %p.card-title CosmicFuse Demo Includes:
+        %small This demo includes a variety of original and cover material that include highlights from a sample mix of eight tunes.
+        %ol
+          %li
+            %span.grey-text Cover&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 Mission Impossible theme
+          %li
+            %span.grey-text Original&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 Go Get It!
+          %li
+            %span.grey-text Cover&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 Hush - Deep Purple
+          %li
+            %span.grey-text Original&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 Savannah
+          %li
+            %span.grey-text Cover&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 Evil Ways - Santana
+          %li
+            %span.grey-text Original&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 K-Otic Blues
+          %li
+            %span.grey-text Cover&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 Lazy - Deep Purple
+          %li
+            %span.grey-text Original&nbsp;&#124;&nbsp;
+            %span.red-text.darken-text-4 The Hip Hop
