--- a/app/views/home/landing.haml
+++ b/app/views/home/landing.haml
@@ -11,8 +11,8 @@
 .slider.fullscreen
   %ul.slides
     %li
-      = image_tag 'splash.png'
+      = image_tag 'splash.jpg'
     %li
-      = image_tag 'splash.png'
+      = image_tag 'splash.jpg'
       .caption.left-align
         %span.amber-text Classic Fusion Rock
