--- a/app/views/layouts/landing.haml
+++ b/app/views/layouts/landing.haml
@@ -7,5 +7,5 @@
     = csrf_meta_tags
   %body#landing
     = yield
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application'
     = yield :javascripts
