--- a/app/views/events/index.haml
+++ b/app/views/events/index.haml
@@ -3,5 +3,5 @@
   :javascript
     window.runPageJs('#{fb_app_id}', '#{@fb_token}')
 
-.row.flow-text
-  %ul#photo-list.staggered_list.col.s12.flow-text
+.row
+  %ul#event-list.staggered_list.col.s12
