--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,7 +18,7 @@
               %li{class: controller_name == 'photos' && 'active'}
                 %a{href: '/photos'} Photos
               %li{class: controller_name == 'events' && 'active'}
-                %a{href: "#!"} Events
+                %a{href: "/events"} Events
               %li{class: controller_name == 'contacts' && 'active'}
                 %a{href: "#!"} Contacts
               %li
