--- a/app/views/home/_member_card.haml
+++ b/app/views/home/_member_card.haml
@@ -1,9 +1,9 @@
 %li.card
   .card-panel.grey.lighten-5.z-depth-1.hoverable
-    .row.valign-wrapper
+    .row
       .col.s5
         %h4.center-align.red-text.darken-text-4= name
-        = image_tag pic_path, class: 'responsive-img circle'
+        = image_tag pic_path, class: 'responsive-img'
         %div.black-text.center-align= instrument
         %div.grey-text.center-align= instrument_info
       .col.s7
