Home band info style. Event tweaks. Fix css loading.

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,5 +1,32 @@
 @charset "UTF-8";
 
+// Mixins
+@import "materialize/components/prefixer";
+@import "materialize/components/mixins";
+@import "materialize/components/color";
+
+// override variables
+$primary-color: black !default;
+$primary-color-light: lighten($primary-color, 15%) !default;
+$primary-color-dark: darken($primary-color, 15%) !default;
+
+// Variables
+@import "materialize/components/variables";
+
+// Reset
+@import "materialize/components/normalize";
+
+// materialize/components
+@import "materialize";
+
+html { 
+  background: image-url("grey_background.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 // side-nav padding overrides
 header, main, footer {
   padding-left: 240px;
@@ -93,6 +120,10 @@ ol li{
       margin-left: 30px;
       display: block;
     }
+    .event-location-name{
+      font-weight: bold;
+      font-size: 120%;
+    }
   }
 }
 
@@ -103,7 +134,20 @@ ol li{
     left: 33%;
   }
   .card-content p{
-    font-size: 65%;
+    letter-spacing: -1px;
     padding-bottom: 10px;
   }
+}
+
+.member-card-image{
+  h4{
+    font-weight: bold;
+  }
+  .member-card-instrument{
+    text-decoration: underline;
+  }
+}
+
+.member-card-content{
+  letter-spacing: -1px;
 }
