--- a/app/assets/stylesheets/landing_index.scss
+++ b/app/assets/stylesheets/landing_index.scss
@@ -1,5 +1,32 @@
 @charset "UTF-8";
 
+// Mixins
+@import "materialize/components/prefixer";
+@import "materialize/components/mixins";
+@import "materialize/components/color";
+
+// override variables
+$primary-color: black !default;
+$primary-color-light: lighten($primary-color, 15%) !default;
+$primary-color-dark: darken($primary-color, 15%) !default;
+
+// Variables
+@import "materialize/components/variables";
+
+// Reset
+@import "materialize/components/normalize";
+
+// materialize/components
+@import "materialize";
+
+html { 
+  background: image-url("grey_background.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 // landing page styles
 #landing .slider{
   .slides li .caption{
