--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -3,20 +3,17 @@
 
 .row.flow-text
   %ul.staggered_list.col.s12
-    %li#main-band-card.card
-      .card-panel.grey.lighten-5.z-depth-1.hoverable
-        .row
-          .col.s5
-            = image_tag 'splash.jpg', class: 'responsive-img'
-            %span.card-title.amber-text Classic Rock Fusion
-          .card-content.col.s7.black-text
-            %p Cosmic Fuse is always ready and willing' to add a little rhythm to your groove!
-            %p Cosmic Fuse is a Hammond organ trio with T.J. Ike on M-3 Hammond organ, piano and lead vocals. Tim Ellis on drums and vocals and James Jamar on the bass guitar and vocals.
-            %p Cosmic Fuse is not your grandpa's idea of an organ trio – especially with Tim Ellis on drums – Cosmic Fuse leans a little more rock.
-            %p Cosmic Fuse material is a fusion of Blues, Rock and Jazz musical styles in their originals, organ standards and keyboard influenced cover songs, especially familiar tunes featuring the Hammond organ. 
-            %p The reaction Cosmic Fuse has received from shows they have played has been exciting with comments on how organized and tight the powerful trio is, their very melodic instrumentals and entertaining song selection.
-            %p Defining Cosmos as the harmonic systematic universe, Cosmic Fuse fuses together their own harmonic systematic universe of music for your enjoyment. 
-    %li.card
+    %li#main-band-card.card.hoverable
+      .card-image
+        = image_tag 'poster.jpg', class: 'responsive-img'
+      .card-content.black-text
+        %p Cosmic Fuse is always ready and willing' to add a little rhythm to your groove!
+        %p Cosmic Fuse is a Hammond organ trio with T.J. Ike on M-3 Hammond organ, piano and lead vocals. Tim Ellis on drums and vocals and James Jamar on the bass guitar and vocals.
+        %p Cosmic Fuse is not your grandpa's idea of an organ trio – especially with Tim Ellis on drums – Cosmic Fuse leans a little more rock.
+        %p Cosmic Fuse material is a fusion of Blues, Rock and Jazz musical styles in their originals, organ standards and keyboard influenced cover songs, especially familiar tunes featuring the Hammond organ.
+        %p The reaction Cosmic Fuse has received from shows they have played has been exciting with comments on how organized and tight the powerful trio is, their very melodic instrumentals and entertaining song selection.
+        %p Defining Cosmos as the harmonic systematic universe, Cosmic Fuse fuses together their own harmonic systematic universe of music for your enjoyment.
+    %li.card.hoverable
       .card-image
         %iframe{frameborder: "no", scrolling: "no", src: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/160882627&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&visual=true", width: "100%", height: "150px"}
       .card-content
