Update track list

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -15,34 +15,28 @@
         %p Defining Cosmos as the harmonic systematic universe, Cosmic Fuse fuses together their own harmonic systematic universe of music for your enjoyment.
     %li.card.hoverable
       .card-image
-        %iframe{frameborder: "no", scrolling: "no", src: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/160882627&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&visual=true", width: "100%", height: "150px"}
+        %iframe{frameborder: "no", scrolling: "no", src: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/330653159&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&visual=true", width: "100%", height: "150px"}
       .card-content
         %p.card-title CosmicFuse Demo Includes:
-        %small This demo includes a variety of original and cover material that include highlights from a sample mix of eight tunes.
+        %small This demo includes a variety of original and cover material that include highlights from a sample mix of nine tunes.
         %ol
           %li
-            %span.grey-text Cover&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 Mission Impossible theme
+            %span.red-text.darken-text-4 Triple-A for Double-I
           %li
-            %span.grey-text Original&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 Go Get It!
+            %span.red-text.darken-text-4 Mission Impossible
           %li
-            %span.grey-text Cover&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 Hush - Deep Purple
+            %span.red-text.darken-text-4 Peter Gunn
           %li
-            %span.grey-text Original&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 Savannah
+            %span.red-text.darken-text-4 Go Get It
           %li
-            %span.grey-text Cover&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 Evil Ways - Santana
+            %span.red-text.darken-text-4 Inferno
           %li
-            %span.grey-text Original&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 K-Otic Blues
+            %span.red-text.darken-text-4 Sensimilla
           %li
-            %span.grey-text Cover&nbsp;&#124;&nbsp;
-            %span.red-text.darken-text-4 Lazy - Deep Purple
-          %li
-            %span.grey-text Original&nbsp;&#124;&nbsp;
             %span.red-text.darken-text-4 The Hip Hop
+          %li
+            %span.red-text.darken-text-4 Deep Fried Funk
+          %li
+            %span.red-text.darken-text-4 Strutt'n
     - @members.each  do |m|
       = render 'member_card', m
