--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -31,6 +31,11 @@ header, main, footer {
   padding-left: 240px;
 }
 
+#sidenav-overlay {
+  // fix side-nav overlay from blocking nav menu items
+  z-index: 1;
+}
+
 @media only screen and (max-width : 992px) {
   header, main, footer {
     padding-left: 0;
