--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,7 +29,7 @@
                   = image_tag 'fb_logo.png'
                   = 'Facebook'
             %a.button-collapse{"data-activates" => "slide-out", :href => "#"}
-              %i.mdi-navigation-menu
+              %i.material-icons menu
     %main.container
       = yield
     %footer.page-footer
