--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -13,6 +13,7 @@
         %p Cosmic Fuse material is a fusion of Blues, Rock and Jazz musical styles in their originals, organ standards and keyboard influenced cover songs, especially familiar tunes featuring the Hammond organ.
         %p The reaction Cosmic Fuse has received from shows they have played has been exciting with comments on how organized and tight the powerful trio is, their very melodic instrumentals and entertaining song selection.
         %p Defining Cosmos as the harmonic systematic universe, Cosmic Fuse fuses together their own harmonic systematic universe of music for your enjoyment.
+    = render '/shared/moondance_music_card'
     = render '/shared/sample_music_card'
     - @members.each  do |m|
       = render 'member_card', m
