--- a/app/views/shared/_sample_music_card.haml
+++ b/app/views/shared/_sample_music_card.haml
@@ -1,25 +1,6 @@
 %li.card.hoverable
   .card-image
-    %iframe{frameborder: "no", scrolling: "no", src: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/330653159&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&visual=true", width: "100%", height: "150px"}
+    %iframe{width:"100%", height:"300", scrolling:"no", frameborder:"no", allow:"autoplay", src:"https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/330653159&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"}
   .card-content
-    %p.card-title CosmicFuse Demo Includes:
+    %p.card-title CosmicFuse Demo
     %small This demo includes a variety of original and cover material that include highlights from a sample mix of nine tunes.
-    %ol
-      %li
-        %span.red-text.darken-text-4 Triple-A for Double-I
-      %li
-        %span.red-text.darken-text-4 Mission Impossible
-      %li
-        %span.red-text.darken-text-4 Peter Gunn
-      %li
-        %span.red-text.darken-text-4 Go Get It
-      %li
-        %span.red-text.darken-text-4 Inferno
-      %li
-        %span.red-text.darken-text-4 Sensimilla
-      %li
-        %span.red-text.darken-text-4 The Hip Hop
-      %li
-        %span.red-text.darken-text-4 Deep Fried Funk
-      %li
-        %span.red-text.darken-text-4 Strutt'n
