--- a/app/views/songs/index.haml
+++ b/app/views/songs/index.haml
@@ -88,4 +88,5 @@
           %li
             %span.red-text.darken-text-4 Ride, Captain, Ride
             %span.grey-text &nbsp;&#124;&nbspBlues Image
+    = render '/shared/moondance_music_card'
     = render '/shared/sample_music_card'
