--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,10 +18,12 @@
                 %a{href: isHomePage ? '#' : '/home', class: 'waves-effect waves-orange'} Home
               %li{class: isSongsPage && 'active'}
                 %a{href: isSongsPage ? '#' : '/songs', class: 'waves-effect waves-orange'} Songs
-              %li{class: isPhotosPage && 'active'}
-                %a{href: isPhotosPage ? '#' : '/photos', class: 'waves-effect waves-orange'} Photos
-              %li{class: isEventsPage && 'active'}
-                %a{href: isEventsPage ? '#' : '/events', class: 'waves-effect waves-orange'} Events
+              %li
+                = link_to "https://www.facebook.com/#{fb_page_id}/photos", class: 'waves-effect waves-orange', target: "_blank" do
+                  = 'Photos'
+              %li
+                = link_to "https://www.facebook.com/#{fb_page_id}/events", class: 'waves-effect waves-orange', target: "_blank" do
+                  = 'Events'
               %li{class: isContactsPage && 'active'}
                 %a{href: isContactsPage ? '#' : '/contacts', class: 'waves-effect waves-orange'} Contacts
               %li
@@ -41,4 +43,4 @@
     = javascript_include_tag 'application'
     = yield :javascripts
     :javascript
-      window.runPageJs('#{fb_app_id}', '#{fb_token}', '#{fb_page_id}');
+      window.runPageJs();
