fix soundcloud settings

--- a/app/views/shared/_moondance_full_music_card.haml
+++ b/app/views/shared/_moondance_full_music_card.haml
@@ -1,6 +1,6 @@
 %li.card.hoverable
   .card-image
-    %iframe{width:"100%", height:"300", scrolling:"no", frameborder:"no", allow:"autoplay", src:"https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1207760773&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"}
+    %iframe{width:"100%", height:"300", scrolling:"no", frameborder:"no", allow:"autoplay", src:"https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1207760773&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"}
   .card-content
-    %p.card-title CosmicFuse Live at Moondance Jam 2018
+    %p.card-title CosmicFuse Live at Moondance Jam 2018 (Full Songs)
     %small The guys getting funky at the Moondance Jam festival on 7/20
