add full songs from sample

--- a/app/views/shared/_sample_music_card.haml
+++ b/app/views/shared/_sample_music_card.haml
@@ -3,4 +3,4 @@
     %iframe{width:"100%", height:"300", scrolling:"no", frameborder:"no", allow:"autoplay", src:"https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/330653159&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"}
   .card-content
     %p.card-title CosmicFuse Demo
-    %small This demo includes a variety of original and cover material that include highlights from a sample mix of nine tunes.
+    %small This demo is highlights from a sample mix of nine tunes that include a variety of original and cover material.
