--- a/app/views/songs/index.haml
+++ b/app/views/songs/index.haml
@@ -90,4 +90,5 @@
             %span.grey-text &nbsp;&#124;&nbspBlues Image
     = render '/shared/sample_music_card'
     = render '/shared/moondance_music_card'
+    = render '/shared/sample_full_music_card'
     = render '/shared/moondance_full_music_card'
